--- a/frontend/src/pages/TaskLists/style.scss
+++ b/frontend/src/pages/TaskLists/style.scss
@@ -15,15 +15,19 @@
 		// .searchSort h1{ }
 
 		.searchSort {
-			display: grid;
-			grid-template-columns: 5fr 1fr;
-			// flex-direction: row;
+			display: inline-flex;
+			/* grid-template-columns: 5fr 1fr; */
+			/* // flex-direction: row; */
 			align-items: center;
 			justify-content: space-between;
 			font-size: xx-large;
 			padding-left: 15px;
 			font-weight: bolder;
 			// margin-left: 20px;
+
+			h1 {
+				font-size: 64px;
+			}
 		}
 		.employeeDetailsWrapper {
 			border-radius: 20px;
@@ -196,50 +200,6 @@
 				// border-bottom: 2px solid #ccc;
 				// box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.3);
 			}
-			.taskBarWrapper {
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				width: fit-content;
-				gap: 5px;
-				padding: 5px;
-				background-color: var(--bgGray);
-				border-radius: 10px;
-				margin-left: 10px;
-				background-color: #efecda;
-				border-bottom: 2px solid #ccc;
-				box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.3);
-
-				.dashboardTaskPending,
-				.dashboardTaskCompleted,
-				.dashboardTaskAssigned {
-					padding: 10px 20px 10px 20px;
-					outline: none;
-					border: none;
-					text-decoration: none;
-					background-color: var(--bgGray);
-					font-weight: 800;
-					color: var(--textGray);
-					// margin-right: 5px;
-					border-radius: 5px;
-					cursor: pointer;
-					height: 35px;
-
-					// margin-top: 3px;
-				}
-
-				.activeTab {
-					background-color: var(--bgWhite);
-					color: var(--navBlack);
-					padding: 10px 20px 10px 20px;
-					outline: none;
-					border: none;
-					text-decoration: none;
-					font-weight: 800;
-					margin-right: 5px;
-					border-radius: 5x;
-				}
-			}
 
 			.taskLogWrapper {
 				padding: 20px 10px 20px 10px;
@@ -296,48 +256,110 @@
 	}
 }
 
-.list {
+.headerLeft {
 	display: flex;
-	height: 50px;
-	justify-content: left;
+	/* justify-content: space-between; */
+	gap: 20px;
+	align-items: center;
+}
 
-	.taskBarWrap0 {
-		background-color: #efecda;
-		padding: 5px;
-		width: fit-content;
-		align-content: center;
-		text-align: center;
-		// padding-top: 14px;
-		border-radius: 10px;
-		// margin-left: 10px;
-		border-bottom: 2px solid #ccc;
-		box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.3);
+.taskFilters {
+	display: flex;
 
-		.dashboardTaskAll {
-			padding: 10px 20px 10px 20px;
-			outline: none;
-			border: none;
-			text-decoration: none;
+	justify-content: space-between;
+	align-items: center;
+	.list {
+		display: flex;
+		height: 50px;
+		width: max-content;
+		justify-content: left;
+		.taskBarWrapper {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: fit-content;
+			gap: 5px;
+			padding: 5px;
 			background-color: var(--bgGray);
-			font-weight: 800;
-			color: var(--textGray);
-			// margin-right: 5px;
-			border-radius: 5px;
-			cursor: pointer;
-			height: 35px;
+			border-radius: 10px;
+			margin-left: 10px;
+			background-color: #efecda;
+			border-bottom: 2px solid #ccc;
+			box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.3);
+
+			.dashboardTaskPending,
+			.dashboardTaskCompleted,
+			.dashboardTaskAssigned {
+				padding: 10px 20px 10px 20px;
+				outline: none;
+				border: none;
+				text-decoration: none;
+				background-color: var(--bgGray);
+				font-weight: 800;
+				color: var(--textGray);
+				// margin-right: 5px;
+				border-radius: 5px;
+				cursor: pointer;
+				height: 35px;
+
+				// margin-top: 3px;
+			}
+
+			.activeTab {
+				background-color: var(--bgWhite);
+				color: var(--navBlack);
+				padding: 10px 20px 10px 20px;
+				outline: none;
+				border: none;
+				text-decoration: none;
+				font-weight: 800;
+				margin-right: 5px;
+				border-radius: 5x;
+			}
 		}
-		.activeTab {
-			height: 35px;
-			align-content: center;
-			background-color: var(--bgWhite);
-			color: var(--navBlack);
-			padding: 10px 20px 10px 20px;
-			outline: none;
-			border: none;
-			text-decoration: none;
-			font-weight: 800;
-			// margin-right: 5px;
-			border-radius: 5x;
+
+		.taskBarWrap0 {
+			background-color: #efecda;
+			padding: 5px;
+			display: flex;
+
+			justify-content: center;
+			width: fit-content;
+
+			align-items: center;
+			text-align: center;
+			/* // padding-top: 14px; */
+			border-radius: 10px;
+			/* // margin-left: 10px; */
+			border-bottom: 2px solid #ccc;
+			box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.3);
+
+			.dashboardTaskAll {
+				padding: 10px 20px 10px 20px;
+				outline: none;
+				border: none;
+				text-decoration: none;
+				background-color: var(--bgGray);
+				font-weight: 800;
+				color: var(--textGray);
+				/* // margin-right: 5px; */
+				border-radius: 5px;
+				cursor: pointer;
+				height: 35px;
+			}
+			.activeTab {
+				height: 35px;
+				align-content: center;
+				background-color: var(--bgWhite);
+				color: var(--navBlack);
+				padding: 10px 20px 10px 20px;
+				outline: none;
+				border: none;
+				text-decoration: none;
+				font-weight: 800;
+				// margin-right: 5px;
+				border-radius: 5x;
+			}
 		}
 	}
 }
